Corrige o caminho da imagem do ícone da agenda no HTML

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <header>
-      <img src="/imagem/agenda.png" alt="Ícone de Agenda" class="icon">
+      <img src="./agenda.png" alt="Ícone de Agenda" class="icon">
       <h1>Agenda de Contatos</h1>
     </header>
     <form id="contactForm">
