Aprimora comentários no HTML e JavaScript para maior clareza

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </tr>
       </thead>
       <tbody id="tabelaContatos">
-        <!-- Linhas inseridas via JavaScript -->
+        <!-- Linhas inseridas no JS -->
       </tbody>
     </table>
   </div>
